LCD frontend and backend

--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.4",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-ivs": "^3.52.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
